--- a/action.yml
+++ b/action.yml
@@ -125,7 +125,7 @@ runs:
         cd ${{ inputs.kernel-dir }}
         mkdir -p -v out
         export CLANG_PATH=$GITHUB__WORKSPACE/clang-aosp/bin
-        export PATH=$PATH:$GITHUB__WORKSPACE/clang-aosp/bin
+        export PATH=$GITHUB__WORKSPACE/clang-aosp/bin:$PATH
         make -j$(nproc --all) CROSS_COMPILE=$GITHUB_WORKSPACE/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$GITHUB_WORKSPACE/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.config }}
         make -j$(nproc --all) CROSS_COMPILE=$GITHUB_WORKSPACE/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$GITHUB_WORKSPACE/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
       shell: bash
