--- a/action.yml
+++ b/action.yml
@@ -130,7 +130,7 @@ runs:
       shell: bash
 
     - name: Setup ccache 
-      if: env.ENABLE_CCACHE == 'true' 
+      if: inputs.ccache == 'true' 
       uses: hendrikmuhs/ccache-action@v1.2 
       with: 
         key: build-kernel-${{ inputs.arch }}${{ inputs.config }} 
