--- a/action.yml
+++ b/action.yml
@@ -196,19 +196,20 @@ runs:
         sed -i 's!block=/dev/block/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
         sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
         
+        rm -rf -v ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image
         cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image* AnyKernel3 -rv
         test -f ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/dtbo.img && cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
         cd AnyKernel3
+        mkdir -p -v tmp
         for f in *.gz *.lz4 *-dtb; do 
         if [[ -f ${f%.*} ]]; then 
-           if [[ ${f%.*} == "Image" ]]; then 
-              rm ${f%.*} -v
+           if [[ ${f%.*} == "*-dtb" ]]; then 
+              mv ${f%.*} tmp -v
+              rm -rf Image* -v
+              mv tmp/* ./ -v
            fi
         fi
         done
-        
-        mkdir -p -v tmp
-        find -name "*-dtb " && mv -v "*-dtb" tmp && rm -rf Image* && mv tmp/* ./ -v
         rm -rf -v tmp
         cd ..
         
